--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "dev": "webpack --config webpack.config.js && electron . && rm ./src/bundle.js",
     "build": "webpack --config webpack.config.js",
-    "update": "ncu",
-    "commit-update": "ncu -u"
+    "check": "ncu",
+    "update": "ncu -u"
   },
   "repository": {
     "type": "git",
@@ -24,8 +24,7 @@
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.7.0",
     "eslint": "^4.19.1",
-    "npm-check-updates": "^2.14.2",
-    "webpack": "^4.8.1",
+    "webpack": "^4.8.3",
     "webpack-cli": "^2.1.3"
   }
 }
