debugging in vscode

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
       "name": "Debug Main Process",
       "type": "node",
       "request": "launch",
-      "preLaunchTask": "build",
+      "preLaunchTask": "dev",
       "postDebugTask": "clean",
       "cwd": "${workspaceRoot}",
       "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron",
@@ -18,8 +18,9 @@
       "type": "chrome",
       "request": "launch",
       "sourceMaps": true,
-      "preLaunchTask": "build",
+      "preLaunchTask": "dev",
       "postDebugTask": "clean",
+      "internalConsoleOptions": "openOnSessionStart",
       "webRoot": "${workspaceRoot}",
       "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron",
       "runtimeArgs": [
