--- a/package.json
+++ b/package.json
@@ -1,20 +1,19 @@
 {
   "name": "sulaiman",
-  "version": "0.1.0",
+  "version": "0.1.0-2",
   "description": "the most useless and ugly keyboard launcher in the planet",
-  "main": "./src/app.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "webpack --config webpack.development.js",
-    "build": "webpack --config webpack.production.js",
+    "dev": "webpack --config webpack.development.main.js --config webpack.development.renderer.js",
     "clean": "rm ./src/bundle.*",
     "check": "ncu",
     "update": "ncu -u"
   },
   "repository": {
     "type": "git",
-    "url": "https://gitlab.com/ker0olos/sulaiman.git"
+    "url": "https://gitlab.com/herpproject/sulaiman.git"
   },
-  "author": "Kerolos Zaki",
+  "author": "Herp Project",
   "license": "MIT",
   "dependencies": {
     "@meltwater/fetch-favicon": "^1.0.4",
