--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "webpack --config webpack.development.main.js --config webpack.development.renderer.js",
-    "clean": "rm ./src/bundle.*",
+    "clean": "rm ./src/main/bundle.* && rm ./src/renderer/bundle.*",
     "check": "ncu",
     "update": "ncu -u"
   },
