--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,9 +2,8 @@
     "env": {
         "browser": true,
         "node": true,
-        "es6": true
+        "mocha": true
     },
-    "plugins": [ ],
     "extends": [ "eslint:recommended" ],
     "parser": "babel-eslint",
     "rules": {
@@ -27,7 +26,7 @@
         ],
         "quotes": [
             "error",
-            "single"
+            "backtick"
         ],
         "brace-style": [
             "error",
