back to single quotes,  the global events registry

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -26,7 +26,7 @@
         ],
         "quotes": [
             "error",
-            "backtick"
+            "single"
         ],
         "brace-style": [
             "error",
