--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "@meltwater/fetch-favicon": "^1.0.4",
+    "builtin-modules": "^3.0.0",
     "electron": "^2.0.2",
     "json5": "^1.0.1",
     "postcss-url": "^7.3.2"
