--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "npx babel src --out-dir public --ignore node_modules --source-maps --copy-files --watch",
     "clean": "rm -r ./public/",
-    "tests": "mocha --require babel-core/register"
+    "test": "mocha --require babel-core/register"
   },
   "repository": {
     "type": "git",
