--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,33 +1,12 @@
 {
   "todo-tree.flat": true,
   "todo-tree.expanded": true,
-  "cSpell.enabledLanguageIds": [
-    "asciidoc",
-    "c",
-    "cpp",
-    "csharp",
-    "css",
-    "go",
-    "handlebars",
-    "html",
-    "jade",
-    "javascript",
-    "javascriptreact",
-    "json",
-    "json5",
-    "latex",
-    "less",
-    "markdown",
-    "php",
-    "plaintext",
-    "pub",
-    "python",
-    "restructuredtext",
-    "rust",
-    "scss",
-    "text",
-    "typescript",
-    "typescriptreact",
-    "yml"
+  "mocha.options": {
+  "compilers": {
+      "js": "babel-register"
+  }
+  },
+  "mocha.requires": [
+      "babel-register"
   ]
 }
