--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "builtin-modules": "^3.0.0",
     "electron": "^2.0.2",
     "json5": "^1.0.1",
-    "postcss-url": "^7.3.2"
+    "vm2": "^3.6.0"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -27,7 +27,6 @@
     "babel-preset-env": "^1.7.0",
     "chai": "^4.1.2",
     "eslint": "^4.19.1",
-    "mocha": "^5.2.0",
-    "vm2": "^3.6.0"
+    "mocha": "^5.2.0"
   }
 }
