--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sulaiman",
   "version": "0.1.0",
-  "description": "the most useless and ugly keyboard launcher in the planet",
+  "description": "a wild terrifying keyboard launcher appeared",
   "main": "index.js",
   "private": true,
   "scripts": {
