--- a/package.json
+++ b/package.json
@@ -20,15 +20,14 @@
     "builtin-modules": "^3.0.0",
     "electron": "^2.0.3",
     "json5": "^1.0.1",
-    "vm2": "^3.6.0"
+    "vm2": "file:../vm2"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.4",
+    "babel-eslint": "^8.2.5",
     "babel-preset-env": "^1.7.0",
-    "chai": "^4.1.2",
-    "eslint": "^4.19.1",
+    "eslint": "^5.0.1",
     "mocha": "^5.2.0"
   }
 }
