--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sulaiman",
   "version": "0.1.0",
-  "description": "wild keyboard launcher appeared",
+  "description": "In no way, shape, or form is this the package you need to create sulaiman extensions",
   "main": "index.js",
   "private": true,
   "scripts": {
