--- a/src/extensions/boilerplate/package.json
+++ b/src/extensions/boilerplate/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sulax-boilerplate",
+  "name": "sulaiman-boilerplate",
   "version": "1.0.0",
   "description": "A boilerplate to create a new sulaiman extension",
   "main": "index.js",
