--- a/src/extensions/boilerplate/package.json
+++ b/src/extensions/boilerplate/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sulaiman-boilerplate",
   "version": "0.1.0",
-  "description": "A boilerplate to create a new sulaiman extension",
+  "description": "A boilerplate to create a new Sulaiman extension",
   "main": "index.js",
   "private": true,
   "repository": {
