--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "npx babel src --out-dir public --ignore node_modules --source-maps --copy-files --watch",
     "clean": "rm -r ./public/",
-    "test": "eslint ./src && nyc mocha --require babel-core/register"
+    "test": "eslint ./src ./test && nyc mocha --require babel-core/register --require babel-polyfill"
   },
   "repository": {
     "type": "git",
@@ -18,16 +18,21 @@
   "dependencies": {
     "@meltwater/fetch-favicon": "^1.0.4",
     "builtin-modules": "^3.0.0",
-    "electron": "^2.0.3",
-    "vm2": "^3.6.1"
+    "electron": "^2.0.4"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.5",
     "babel-preset-env": "^1.7.0",
+    "browserify": "^16.2.2",
     "eslint": "^5.0.1",
+    "istanbul-lib-hook": "^1.1.0",
+    "istanbul-lib-instrument": "^1.10.1",
     "mocha": "^5.2.0",
-    "nyc": "^12.0.2"
+    "nyc": "^12.0.2",
+    "spectron": "^3.8.0",
+    "vm2": "^3.6.2",
+    "zombie": "^6.1.2"
   }
 }
