now dialogue has a good theme

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,8 +33,7 @@
         "no-empty-function": "error",
         "brace-style": [
             "error",
-            "allman",
-            { "allowSingleLine": true }
+            "allman"
         ],
         "semi": [
             "error",
