--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,4 @@
 {
   "todo-tree.flat": true,
-  "todo-tree.expanded": true,
-  "mocha.requires":
-  [
-    "babel-register",
-    "babel-polyfill"
-  ],
-  "mocha.coverage":
-  {
-    "enable": false,
-    "decoration": true,
-    "runWithInterval": false,
-    "autoUpdateInterval": 20000,
-    "activeOnStart": true,
-    "runAfterTest": false,
-    "runCoverageAfterFileSave": false,
-    "reporters": []
-  }
+  "todo-tree.expanded": true
 }
