--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,8 +26,7 @@
       },
       "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron",
       "runtimeArgs": [
-        "${workspaceRoot}/public/main/main.js",
-        "--remote-debugging-port=9222"
+        "${workspaceRoot}/public/main/main.js"
       ]
     }
   ]
