--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "npx babel src --out-dir public --ignore node_modules --source-maps --copy-files --watch",
     "clean": "rm -r ./public/",
-    "test": "xvfb-run electron ./public/main/main.js"
+    "test": "xvfb-run -a electron ./public/main/main.js"
   },
   "nyc": {
     "include": [
