--- a/package.json
+++ b/package.json
@@ -7,12 +7,11 @@
   "scripts": {
     "dev": "npx babel src --out-dir public --ignore node_modules --source-maps --copy-files --watch",
     "clean": "rm -r ./public/",
-    "test": "xvfb-run -a electron ./public/main/main.js"
+    "test": "xvfb-maybe -a electron ./public/main/main.js"
   },
   "nyc": {
     "include": [
       "**/main.js",
-
       "**/block.js",
       "**/extension.js",
       "**/registry.js",
@@ -44,6 +43,7 @@
     "nyc": "^12.0.2",
     "puppeteer": "^1.2.0",
     "puppeteer-to-istanbul": "^1.2.2",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "xvfb-maybe": "^0.2.1"
   }
 }
