--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,14 +1,15 @@
-image: node:slim
-
 cache:
   paths:
   - node_modules/
 
 build:
   script:
-    - apt-get update
-    - apt-get -y install xvfb libgtkextra-dev libgconf2-dev libnss3 libasound2 libxtst-dev libxss1
     - npm install
     - npm test
   only:
     - development
+  tags:
+    - local
+    - arch
+    - linux
+    - 64bit
