--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "npx babel src --out-dir public --ignore node_modules --source-maps --copy-files --watch",
     "clean": "rm -r ./public/",
-    "test": "xvfb-maybe -a electron ./public/main/main.js"
+    "test": "eslint ./src ./test && mocha --require babel-core/register --require babel-polyfill --exit"
   },
   "nyc": {
     "include": [
@@ -43,7 +43,6 @@
     "nyc": "^12.0.2",
     "puppeteer": "^1.2.0",
     "puppeteer-to-istanbul": "^1.2.2",
-    "request-promise": "^4.2.2",
-    "xvfb-maybe": "^0.2.1"
+    "request-promise": "^4.2.2"
   }
 }
