--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "npx babel src --out-dir public --ignore node_modules --source-maps --copy-files --watch",
     "clean": "rm -r ./public/",
-    "test": "eslint ./src ./test && nyc mocha --require babel-core/register --require babel-polyfill --exit"
+    "test": "eslint ./src ./test && nyc mocha --require babel-core/register --require babel-polyfill"
   },
   "nyc": {
     "include": [
@@ -26,7 +26,8 @@
   "author": "Herp Project",
   "license": "GPL-3.0",
   "dependencies": {
-    "builtin-modules": "^3.0.0",
+    "electron": "^3.0.0-beta.2",
+    "pidtree": "^0.3.0",
     "vm2": "^3.6.2"
   },
   "devDependencies": {
@@ -35,10 +36,8 @@
     "babel-eslint": "^8.2.5",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "electron": "^3.0.0-beta.1",
     "eslint": "^5.1.0",
     "mocha": "^5.2.0",
-    "node-cmd": "^3.0.0",
     "nyc": "^12.0.2",
     "puppeteer": "^1.2.0",
     "puppeteer-to-istanbul": "^1.2.2",
