once again with a change to buttons, replace its grid with a flexbox that can fit into any number and shape of elements

--- a/src/extensions/default-dark/package.json
+++ b/src/extensions/default-dark/package.json
@@ -8,7 +8,7 @@
     "url": "https://gitlab.com/herpproject/sulaiman-default-dark.git"
   },
   "sulaiman": {
-    "name": "Default Dark",
+    "displayName": "Default Dark",
     "permissions": [ ],
     "modules": [ ]
   },
