--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ test:
   script:
     - echo "export PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true && npm install" | sh
     - npm run compile
-    - npm run test
+    - ./node_modules/.bin/electron ./public/main/main.js --remote-debugging-port=9222
   only:
     - development
   tags:
