i really hate my life

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,8 +10,7 @@ test:
   stage: test
   script:
     - echo "export PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true && npm install" | sh
-    - npm run compile
-    - ./node_modules/.bin/electron ./public/main/main.js --remote-debugging-port=9222
+    - npm test
   only:
     - development
   tags:
