--- a/src/extensions/extension-debug/package.json
+++ b/src/extensions/extension-debug/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sulaiman-extension-debug",
   "version": "0.1.0",
-  "description": "",
+  "description": "does tests on sulaiman extension APIs",
   "main": "index.js",
   "private": true,
   "sulaiman": {
