--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
   "license": "GPL-3.0",
   "dependencies": {
     "electron": "^3.0.0-beta.2",
-    "pidtree": "^0.3.0",
-    "vm2": "^3.6.2"
+    "fs-extra": "^7.0.0",
+    "vm2": "^3.6.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -37,9 +37,10 @@
     "babel-eslint": "^8.2.6",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
-    "eslint": "^5.1.0",
+    "eslint": "^5.3.0",
     "mocha": "^5.2.0",
     "nyc": "^12.0.2",
+    "pidtree": "^0.3.0",
     "puppeteer": "^1.2.0",
     "puppeteer-to-istanbul": "^1.2.2",
     "request-promise": "^4.2.2"
