--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
   "nyc": {
     "include": [
       "**/main.js",
+      "**/api.js",
       "**/card.js",
-      "**/elements.js",
-      "**/extension.js",
+      "**/control.js",
       "**/registry.js",
-      "**/renderer.js"
+      "**/renderer.js",
+      "**/searchBar.js"
     ]
   },
   "repository": {
@@ -25,10 +26,14 @@
     "url": "https://gitlab.com/herpproject/sulaiman.git"
   },
   "author": "Herp Project",
-  "license": "GPL-3.0",
+  "license": "MIT",
   "dependencies": {
     "electron": "^3.0.0-beta.2",
     "fs-extra": "^7.0.0",
+    "inly": "^2.0.2",
+    "node-wget-promise": "^0.1.6",
+    "npm": "^6.3.0",
+    "request-promise-native": "^1.0.5",
     "vm2": "^3.6.3"
   },
   "devDependencies": {
@@ -42,7 +47,6 @@
     "nyc": "^12.0.2",
     "pidtree": "^0.3.0",
     "puppeteer": "^1.2.0",
-    "puppeteer-to-istanbul": "^1.2.2",
-    "request-promise": "^4.2.2"
+    "puppeteer-to-istanbul": "^1.2.2"
   }
 }
