--- a/src/extensions/sulaiman-extension-debug/package.json
+++ b/src/extensions/sulaiman-extension-debug/package.json
@@ -17,7 +17,8 @@
   "author": "Herp Project",
   "license": "UNLICENSED",
   "dependencies": {
-    "@meltwater/fetch-favicon": "^1.0.4"
+    "@meltwater/fetch-favicon": "^1.0.4",
+    "node-wget-promise": "^0.1.6"
   },
   "devDependencies": {
     "sulaiman": "0.1.0"
