--- a/src/extensions/sulaiman-default-dark/package.json
+++ b/src/extensions/sulaiman-default-dark/package.json
@@ -8,9 +8,7 @@
     "url": "https://gitlab.com/herpproject/sulaiman-default-dark.git"
   },
   "sulaiman": {
-    "displayName": "Default Dark",
-    "permissions": [ ],
-    "modules": [ ]
+    "displayName": "Default Dark"
   },
   "keywords": [
     "sulaiman",
@@ -22,6 +20,6 @@
   "author": "Herp Project",
   "license": "MIT",
   "devDependencies": {
-    "sulaiman": "0.1.0"
+    "sulaiman": "0.1.0-2"
   }
 }
