windows app list,  new permissions and mockups like process, browser window, shell and dialog

--- a/src/extensions/sulaiman-extension-debug/package.json
+++ b/src/extensions/sulaiman-extension-debug/package.json
@@ -7,7 +7,7 @@
   "sulaiman": {
     "displayName": "Extension Debug",
     "permissions": [
-      "body",
+      "document",
       "clipboard"
     ],
     "modules": [
