--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "author": "Herp Project",
   "license": "MIT",
   "dependencies": {
-    "electron": "^3.0.0-beta.2",
+    "electron": "^3.0.0-nightly.20180821",
     "fs-extra": "^7.0.0",
     "inly": "^2.0.2",
     "node-wget-promise": "^0.1.6",
