--- a/src/extensions/sulaiman-extension-debug/package.json
+++ b/src/extensions/sulaiman-extension-debug/package.json
@@ -17,6 +17,6 @@
   "author": "Herp Project",
   "license": "UNLICENSED",
   "devDependencies": {
-    "sulaiman": "0.1.0-2"
+    "sulaiman": "latest"
   }
 }
