--- a/src/extensions/sulaiman-default-dark/package.json
+++ b/src/extensions/sulaiman-default-dark/package.json
@@ -14,6 +14,6 @@
   "author": "Herp Project",
   "license": "MIT",
   "devDependencies": {
-    "sulaiman": "0.1.0-2"
+    "sulaiman": "latest"
   }
 }
